[gd_scene load_steps=3 format=3 uid="uid://deo4gf8modmfl"]

[ext_resource type="Script" path="res://scenes/scripts/menu_level_selection.gd" id="1_nqci1"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="2_msfjb"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nqci1")

[node name="LevelSelection" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.5
offset_top = 116.0
offset_right = 145.5
offset_bottom = 181.0
grow_horizontal = 2
theme = ExtResource("2_msfjb")
theme_override_font_sizes/font_size = 50
text = "Level Selection"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -205.0
offset_right = 171.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_msfjb")
text = "1"

[node name="2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_msfjb")
text = "2"

[node name="3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_msfjb")
text = "3"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = 215.0
offset_right = 140.0
offset_bottom = 322.6
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="MarginContainer3"]
layout_mode = 2
theme = ExtResource("2_msfjb")
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="MarginContainer3/Back" to="." method="_on_back_pressed"]
